--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "redux-localstorage-simple",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Save and load Redux state to and from LocalStorage. Supports Immutable.js data structures.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "clean": "rimraf dist",
+    "build": "npm run clean && babel src --out-dir dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,5 +25,11 @@
   "homepage": "https://github.com/kilkelly/redux-localstorage-simple#readme",
   "dependencies": {
     "immutable": "^3.8.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.9.0",
+    "babel-core": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "rimraf": "^2.5.2"
   }
 }
