--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "babel-cli": "^6.9.0",
     "babel-core": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
-    "rimraf": "^2.5.2"
+    "rimraf": "^2.5.2",
+    "tap-spec": "^4.1.1",
+    "tape": "^4.6.1"
   }
 }
