--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "clean": "rimraf dist",
+    "build:webpack": "webpack --config test/webpack.config.test.js",
     "build": "npm run clean && babel src --out-dir dist",
     "test": "tape -r babel-register test/tape/**/*.js | tap-spec"
   },
@@ -33,8 +34,6 @@
     "babel-preset-es2015": "^6.9.0",
     "redux": "^3.6.0",
     "rimraf": "^2.5.2",
-    "tap-spec": "^4.1.1",
-    "tape": "^4.6.1",
     "webpack": "^1.13.2"
   }
 }
