--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.9.0",
+    "deep-equal": "^1.0.1",
     "redux": "^3.6.0",
     "rimraf": "^2.5.2",
     "webpack": "^1.13.2"
