--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "clean": "rimraf dist",
-    "build:webpack": "webpack --config test/webpack.config.test.js",
-    "build": "npm run clean && babel src --out-dir dist",
+    "build": "npm run build:dist && npm run build:test",
+    "build:dist": "npm run clean && babel src --out-dir dist",
+    "build:test": "webpack --config test/webpack.config.test.js",    
     "test": "tape -r babel-register test/tape/**/*.js | tap-spec"
   },
   "repository": {
