--- a/package.json
+++ b/package.json
@@ -25,17 +25,17 @@
   },
   "homepage": "https://github.com/kilkelly/redux-localstorage-simple#readme",
   "dependencies": {
-    "immutable": "^3.8.1",
-    "object-merge": "^2.5.1"
+    "immutable": "3.8.1",
+    "object-merge": "2.5.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.9.0",
-    "babel-core": "^6.9.1",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.9.0",
-    "deep-equal": "^1.0.1",
-    "redux": "^3.6.0",
-    "rimraf": "^2.5.2",
-    "webpack": "^1.13.2"
+    "babel-cli": "6.9.0",
+    "babel-core": "6.9.1",
+    "babel-loader": "6.2.5",
+    "babel-preset-es2015": "6.9.0",
+    "deep-equal": "1.0.1",
+    "redux": "3.6.0",
+    "rimraf": "2.5.2",
+    "webpack": "1.13.2"
   }
 }
