--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "clean": "rimraf dist",
+    "clean": "rimraf dist/index.js",
     "build": "npm run build:dist && npm run build:test",
     "build:dist": "npm run clean && babel src --out-dir dist",
     "build:test": "webpack --config test/webpack.config.test.js"
@@ -26,7 +26,6 @@
   },
   "homepage": "https://github.com/kilkelly/redux-localstorage-simple#readme",
   "dependencies": {
-    "immutable": "3.8.1",
     "object-merge": "2.5.1"
   },
   "devDependencies": {
