--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "clean": "rimraf dist/index.js",
     "build": "npm run build:dist && npm run build:test",
-    "build:dist": "npm run clean && babel src --out-dir dist",
+    "build:dist": "npm run clean && babel src -d dist",
     "build:test": "webpack --config test/webpack.config.test.js"
   },
   "repository": {
@@ -29,13 +29,15 @@
     "object-merge": "2.5.1"
   },
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.3",
-    "babel-loader": "6.2.5",
-    "babel-preset-es2015": "6.24.1",
-    "deep-equal": "1.0.1",
-    "redux": "3.6.0",
-    "rimraf": "2.5.2",
-    "webpack": "1.13.2"
+    "@babel/cli": "7.10.5",
+    "@babel/core": "7.10.5",
+    "@babel/preset-env": "7.10.4",
+    "babel-loader": "8.1.0",
+    "babel-preset-minify": "0.5.1",
+    "deep-equal": "2.0.3",
+    "redux": "4.0.5",
+    "rimraf": "3.0.2",
+    "webpack": "^4.44.0",
+    "webpack-cli": "3.3.12"
   }
 }
