--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "homepage": "https://github.com/kilkelly/redux-localstorage-simple#readme",
   "dependencies": {
-    "object-merge": "2.5.1"
+    "merge": "2.1.0"
   },
   "devDependencies": {
     "@babel/cli": "7.10.5",
