--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "merge": "2.1.1"
   },
   "devDependencies": {
-    "@babel/cli": "7.10.5",
+    "@babel/cli": "^7.17.6",
     "@babel/core": "7.10.5",
     "@babel/preset-env": "7.10.4",
     "babel-loader": "8.1.0",
@@ -37,7 +37,7 @@
     "deep-equal": "2.0.3",
     "redux": "4.1.2",
     "rimraf": "3.0.2",
-    "webpack": "^4.44.0",
+    "webpack": "^5.72.0",
     "webpack-cli": "3.3.12"
   }
 }
