--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
-    "@babel/core": "7.10.5",
-    "@babel/preset-env": "7.10.4",
-    "babel-loader": "8.1.0",
-    "babel-preset-minify": "0.5.1",
-    "deep-equal": "2.0.3",
-    "redux": "4.1.2",
-    "rimraf": "3.0.2",
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "babel-loader": "^8.2.4",
+    "babel-preset-minify": "^0.5.1",
+    "deep-equal": "^2.0.5",
+    "redux": "^4.1.2",
+    "rimraf": "^3.0.2",
     "webpack": "^5.72.0",
-    "webpack-cli": "3.3.12"
+    "webpack-cli": "^4.9.2"
   }
 }
